updated main title

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <main>
       <section class="welcome christmas-bg">
         <div class="container">
-          <h1><b id="daysTillChristmas"></b> Days until Christmas</h1>
+          <h1><b>Updated Title from GitHub!☺ </b></h1>
         </div>
       </section>
       <section class="activities">
